Closed Bug 1128417 Opened 9 years ago Closed 9 years ago

Incorrect end time for media element when captured

Categories

(Core :: Audio/Video, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla39
Tracking Status
firefox39 --- fixed

People

(Reporter: jwwang, Assigned: jwwang)

References

Details

Attachments

(1 file)

In capture mode, 'ended' event is reported in MediaDecoder::DecodedStreamGraphListener::DoNotifyFinished() without waiting for audio/video samples to be fully drained in MediaDecoderStateMachine::RunStateMachine(). We should call UpdatePlaybackPosition() to ensure the end time is consistent with that of non-capture mode.
Blocks: 901102
Depends on: 1128420
Depends on: 1127235
Handle playback ended in a consistent way for both file and stream case.

Try most green: https://treeherder.mozilla.org/#/jobs?repo=try&revision=854eae361f01
Assignee: nobody → jwwang
Status: NEW → ASSIGNED
Attachment #8569648 - Flags: review?(roc)
https://hg.mozilla.org/mozilla-central/rev/04c1b5a08d9c
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla39
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: