Bug 1128417 - handle playback ended in a consistent way for both file and stream case. r=roc.